--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.0",
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.38.0",
     "web-vitals": "^2.1.2"
