--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^14.2.0",
     "emailjs-com": "^3.2.0",
     "ityped": "^1.0.3",
     "node-sass": "^7.0.1",
